--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
             shortName: "tbd",
             editors: [{
                 name: "Rick Waldron",
-                company: "jQuery Foundation"
+                company: "jQuery Foundation",
+                companyURL: "https://jquery.org/"
             },
             {
                 name: "Tobie Langel",
-                company: "Intel"
+                company: "Intel Corporation",
+                companyURL: "http://intel.com/"
             }],
             wg: "Device APIs Group",
             wgURI: "http://www.w3.org/2009/dap/",
