Adding a link to contributors' page.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
                     value: 'We are on Github.',
                     href: 'https://github.com/w3c/sensors'
                 }, {
+                    value: 'Contributors',
+                    href: 'https://github.com/w3c/sensors/graphs/contributors'
+                }, {
                     value: 'File a bug.',
                     href: 'https://github.com/w3c/sensors/issues'
                 }, {
