--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
             {
                 name: "Tobie Langel",
                 company: "Intel Corporation",
-                companyURL: "http://intel.com/"
+                companyURL: "http://intel.com/",
+                w3cid: 78102
             }],
             wg: "Device APIs Group",
             wgURI: "http://www.w3.org/2009/dap/",
