Enable inline GH issues.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
                     value: 'Mailing list.',
                     href: 'https://lists.w3.org/Archives/Public/public-device-apis/'
                 }]
-            }]
+            }],
+            issueBase: "https://www.github.com/w3c/sensors/issues/",
+            githubAPI: "https://api.github.com/repos/w3c/sensors"
         };
     </script>
   </head>
