--- a/index.html
+++ b/index.html
@@ -51,10 +51,6 @@
     </script>
   </head>
   <body>
-    <section id='abstract'>
-      <p>
-      </p>
-    </section>
     <section id='sotd'>
     </section>
     <section>
@@ -66,4 +62,7 @@
       </p>
     </section>
   </body>
+<section id=abstract>
+    This specification defines a framework for exposing sensor data to the Open Web Platform in a consistant way. It does so by defining a blueprint for writing specifications of concrete sensors along with an abstract Sensor interface that can be extended to accomodate different sensor types.
+</section>
 </html>
