--- a/index.html
+++ b/index.html
@@ -67,4 +67,8 @@
 <section id=sotd>
 </section>
 
+<section id=conformance>
+    Implementations that use ECMAScript to expose the APIs defined in this specification must implement them in a manner consistent with the ECMAScript Bindings defined in the Web IDL specification [[!WEBIDL]].
+</section>
+
 </html>
