Add use case section with corresponding issue.

--- a/index.html
+++ b/index.html
@@ -71,4 +71,8 @@
     Implementations that use ECMAScript to expose the APIs defined in this specification must implement them in a manner consistent with the ECMAScript Bindings defined in the Web IDL specification [[!WEBIDL]].
 </section>
 
+Use Cases
+---------
+
+<div class=issue data-number=12></div>
 </html>
