Add security and privacy section and corresponding issues.

--- a/index.html
+++ b/index.html
@@ -75,4 +75,11 @@ Use Cases
 ---------
 
 <div class=issue data-number=12></div>
+
+Security and privacy considerations
+-----------------------------------
+
+<div class=issue data-number=14></div>
+<div class=issue data-number=20></div>
+
 </html>
