Add Extensibility section.

--- a/index.html
+++ b/index.html
@@ -82,4 +82,12 @@ Security and privacy considerations
 <div class=issue data-number=14></div>
 <div class=issue data-number=20></div>
 
+Extensibility
+-------------
+
+The purpose of this section is to describe how this specification can be extended to specify concrete sensors.
+
+It will feature precise steps on how to extend or inherit from interfaces described in this specification along with examples for two sensors, one which measures a single value and one which measures multiple ones.
+
+<div class=issue data-number=22></div>
 </html>
