Add issue summary section.

--- a/index.html
+++ b/index.html
@@ -210,4 +210,6 @@ The purpose of this section is to describe how this specification can be extende
 It will feature precise steps on how to extend or inherit from interfaces described in this specification along with examples for two sensors, one which measures a single value and one which measures multiple ones.
 
 <div class=issue data-number=22></div>
+
+<section id=issue-summary></section>
 </html>
