Move Acknowledgement section.

--- a/index.html
+++ b/index.html
@@ -53,12 +53,6 @@
   <body>
     <section>
      
-    <section>
-      <h2>Acknowledgements</h2>
-      <p>
-       
-      </p>
-    </section>
   </body>
 <section id=abstract>
     This specification defines a framework for exposing sensor data to the Open Web Platform in a consistant way. It does so by defining a blueprint for writing specifications of concrete sensors along with an abstract Sensor interface that can be extended to accomodate different sensor types.
@@ -212,4 +206,11 @@ It will feature precise steps on how to extend or inherit from interfaces descri
 <div class=issue data-number=22></div>
 
 <section id=issue-summary></section>
+
+<section id=acknowledgements>
+
+Acknowledgements
+----------------
+
+</section>
 </html>
