--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ dictionary SensorInit {
 
 <div class=issue data-number=26></div>
 
-Returns a promise which resolves to an array of <a>SensorIdentifiers<a> representing all available local sensors.
+Returns a promise which resolves to an array of <a>SensorIdentifiers</a> representing all available local sensors.
 
 <div class=issue data-number=28></div>
 <div class=issue data-number=7></div>
