--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
   </head>
   <body>
 <section id=abstract>
-    This specification defines a framework for exposing sensor data to the Open Web Platform in a consistant way. It does so by defining a blueprint for writing specifications of concrete sensors along with an abstract Sensor interface that can be extended to accomodate different sensor types.
+    This specification defines a framework for exposing sensor data to the Open Web Platform in a consistent way. It does so by defining a blueprint for writing specifications of concrete sensors along with an abstract Sensor interface that can be extended to accommodate different sensor types.
 </section>
 
 <section id=sotd>
