Remove contributors now that respec pulls them directly from GH.

--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@ It will feature precise steps on how to extend or inherit from interfaces descri
 Acknowledgements
 ----------------
 
-The following people have greatly contributed to this specification through extensive discussions on GitHub: <span id=gh-commenters>Anssi Kostiainen, Arthur Barstow, Boris Smus, Claes Nilsson, Dave Raggett, davidmarkclements, Domenic Denicola, fhirsch, Jafar Husain, Johannes Hund, Kris Kowal, Marcos Caceres, Mats Wichmann, Matthew Podwysocki, pablochacin, Remy Sharp, Rich Tibbett, Rijubrata Bhaumik, Sean T. McBeth, smaug----, and zenparsing</span>.
+The following people have greatly contributed to this specification through extensive discussions on GitHub: <span id=gh-commenters></span>.
 
-We'd also like to thank <span id=gh-contributors>Anssi Kostiainen and Michael[tm] Smith</span> for their editorial input.
+We'd also like to thank <span id=gh-contributors></span> for their editorial input.
 
 </section>
 
