Add ref to issue #44.

--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@ Returns the related <a>Sensor</a> object.
 
 #### <dfn>SensorObserver.timeout</dfn>
 
+<div class=issue data-number=#44></div>
+
 #### <dfn>SensorObserver.wakeup</dfn>
 
 <div class=issue data-number=15></div>
