Mark the document as not on Rec-track

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             wgURI: "http://www.w3.org/2009/dap/",
             wgPublicList: "public-device-apis",
             wgPatentURI:  "http://www.w3.org/2004/01/pp-impl/43696/status",
+            noRecTrack: true,
             edDraftURI: "https://w3c.github.io/sensors/",
             format: "markdown",
             noLegacyStyle: true,
