--- a/examples/realtime-positioning/index.html
+++ b/examples/realtime-positioning/index.html
@@ -12,21 +12,6 @@
     <body>
         <div id="map"></div>
         <p id="info_box"></p>
-        <script>    
-            function onsuccess(position) {
-                var coords = [position.coords.latitude, position.coords.longitude];
-                updateMap(null, coords);
-            }
-            
-            function onerror(e) {
-                updateMap(e);
-            }
-            
-            navigator.geolocation.watchPosition(onsuccess, onerror, {
-                enableHighAccuracy: true, 
-                maximumAge: 0, 
-                timeout: Infinity
-            });
-        </script>
+        <script src="./index.js"></script>
     </body>
 </html>
