Remove unnecessary code element.

--- a/usecases.html
+++ b/usecases.html
@@ -60,7 +60,7 @@ Displaying the position of a vehicle on a map in real time
 
 <iframe src="./examples/realtime-positioning/index.html" width="100%" height="350px" frameBorder=0></iframe>
 
-<pre class="example highlight"><code data-include="./examples/realtime-positioning/index.js" data-include-sync=yup></code></pre>
+<pre class="example highlight" data-include="./examples/realtime-positioning/index.js" data-include-sync=yup></pre>
 
 
 Relying on cached data in a battery- or CPU-contrained environment
