Improve cached-data example app.

--- a/examples/cached-data/index.html
+++ b/examples/cached-data/index.html
@@ -8,7 +8,9 @@
     </head>
     <body>
         <form id="address">
-            <p id=msg class=info style="display:block">Fetching your cached geolocation to prefill the form…</p>
+            <p><a href="">Refresh</a></p>
+            <h1>Your Address</h1>
+            <p id=msg class=info style="display:block"></p>
             <p>
                 <label>Street:<br>
                     <input type="text" name="street" value="" id="street">
