Add polyfill + example code to realtime positioning use case.

--- a/usecases.html
+++ b/usecases.html
@@ -80,7 +80,9 @@ In this use case, a vehicule is positioned on a map in real time using the devic
     <iframe src="./examples/realtime-positioning/index.html" frameBorder=0 scrolling=no></iframe>
 </div>
 
-<pre class="example highlight" data-include="./examples/realtime-positioning/index.js" data-include-sync=yup></pre>
+<pre title="Proposed Syntax" class="example highlight" data-include="./examples/realtime-positioning/proposal.js" data-include-sync=yup></pre>
+
+<pre title="Current Syntax" class="example highlight" data-include="./examples/realtime-positioning/index.js" data-include-sync=yup></pre>
 
 
 Relying on cached data in a battery- or CPU-contrained environment
