--- a/examples/realtime-positioning/index.html
+++ b/examples/realtime-positioning/index.html
@@ -12,6 +12,7 @@
     <body>
         <div id="map"></div>
         <p id="info_box"></p>
-        <script src="./index.js"></script>
+        <script src="./polyfill.js"></script>
+        <script src="./proposal.js"></script>
     </body>
 </html>
