Add a refresh button to realtime-positioning example.

--- a/examples/realtime-positioning/index.html
+++ b/examples/realtime-positioning/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="map"></div>
-        <p id="info_box"></p>
+        <p id="info_box"><a href="">refresh</a></p>
         <script src="./polyfill.js"></script>
         <script src="./proposal.js"></script>
     </body>
