--- a/examples/cached-data/index.html
+++ b/examples/cached-data/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <form id="address">
-            <p><a href="">Refresh</a></p>
+            <p><a href="">refresh</a></p>
             <h1>Your Address</h1>
             <p id=msg class=info style="display:block"></p>
             <p>
