--- a/examples/realtime-positioning/index.html
+++ b/examples/realtime-positioning/index.html
@@ -12,7 +12,7 @@
     <body>
         <div id="map"></div>
         <p id="info_box"><a href="">refresh</a></p>
-        <script src="./polyfill.js"></script>
+        <script src="../../polyfills/geolocation.js"></script>
         <script src="./proposal.js"></script>
     </body>
 </html>
