Add max-width for readability.

--- a/usecases.html
+++ b/usecases.html
@@ -46,7 +46,11 @@
             githubAPI: "https://api.github.com/repos/w3c/sensors"
         };
     </script>
+    <style>
+        body {
+            max-width: 50em;
         }
+    </style>
   </head>
   <body>
 <section id=abstract>
