Include requestData static method in geoloc polyfill.

--- a/examples/cached-data/index.html
+++ b/examples/cached-data/index.html
@@ -293,6 +293,7 @@
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB5L-dHRkETVpyt9TOHXU6Enldk8UjUGdM&callback=start">
       </script>
     <script src="./address.js"></script>
+    <script src="../../polyfills/geolocation.js"></script>
     <script src="./index.js"></script>
     </body>
 </html>
