--- a/index.html
+++ b/index.html
@@ -1286,7 +1286,7 @@ but rather to put it in the context of detecting hardware-dependent features.</p
     <span class="c1">// run in circles...</span>
 <span class="p">}</span>
         
-<span class="k">if</span> <span class="p">(</span><span class="s2">"PromimitySensor"</span> <span class="k">in</span> <span class="nb">window</span><span class="p">)</span> <span class="p">{</span>
+<span class="k">if</span> <span class="p">(</span><span class="s2">"ProximitySensor"</span> <span class="k">in</span> <span class="nb">window</span><span class="p">)</span> <span class="p">{</span>
     <span class="c1">// watch out!</span>
 <span class="p">}</span>
         
