Indicate support for HTML5Apps project in ack of my work

--- a/index.html
+++ b/index.html
@@ -1777,7 +1777,7 @@ Claes Nilsson,
 Dave Raggett,
 davidmarkclements,
 Domenic Denicola,
-Dominique Hazael-Massieux,
+Dominique Hazael-Massieux (via the HTML5Apps project),
 Frederick Hirsch,
 Francesco Iovine,
 gmandyam,
